# TFLiteC-mobile

./: .gitignore  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/vn/nam/tflite/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: yolo_fastest_v2.tflite
android/app/src/main/cpp/: CMakeLists.txt  arm64-v8a  armeabi-v7a  flatbuffers  native-lib.cpp  opencv-4.3.0-android-sdk  tensorflow  tflite_cpu.cpp  tflite_cpu.h  x86  x86_64
android/app/src/main/java/vn/nam/tflite/: BitmapUtils.java  MainActivity.java  TensorUtils.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/vn/nam/tflite/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cpp/: tflite_cpu.cpp  tflite_cpu.h
